--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/express": "^4.17.13",
         "@types/sequelize": "^4.28.10",
         "nodemon": "^2.0.14",
+        "sequelize-cli": "^6.3.0",
         "ts-node": "^10.3.0",
         "typescript": "^4.4.4"
     }
