--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon",
+        "dev": "tsnd --respawn src/index.ts",
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -25,6 +25,7 @@
         "nodemon": "^2.0.14",
         "sequelize-cli": "^6.3.0",
         "ts-node": "^10.3.0",
+        "ts-node-dev": "^1.1.8",
         "typescript": "^4.4.4"
     }
 }
