--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "ejs": "^3.1.6",
         "express": "^4.17.1",
         "mysql2": "^2.3.2",
         "passport": "^0.5.0",
