--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "passport": "^0.5.0",
         "passport-google-oauth": "^2.0.0",
         "sequelize": "^6.8.0",
+        "socket.io": "^4.3.1",
         "sqlite3": "^5.0.2"
     },
     "devDependencies": {
